Get Supplier By Id + tests for view